--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,39 @@
 version: '3'
 
 services:
-    db:
-        # build: ./mysql/
-        image: mysql-con
-        container_name: mysql-con
-        # ports:
-        #     - 3306:3306
-        restart: always
+    # ftps:
+    #     image: ftps
+    #     container_name: ftps
+    #     ports:
+    #         - 20:20
+    #         - 21:21
+    #     restart: always
         
-    wordpress:
-        # build: ./wordpress/
-        image: wp
-        container_name: wp
+    nginx:
+        image: nginx-test
+        container_name: nginx-test
         ports:
             - 8080:80
-        depends_on:
-            - db
+            - 443:443
         restart: always
+
+    # db:
+    #     image: mysql-con
+    #     container_name: mysql-con
+    #     restart: always
+        
+    # wordpress:
+    #     image: wp
+    #     container_name: wp
+    #     ports:
+    #         - 5050:80
+    #         # - 8080:80
+    #     depends_on:
+    #         - db
+    #     restart: always
+
+    # phpmyadmin:
+    #     image: py
+    #     container_name: py
+    #     ports:
+    #         - 5000:80
