--- a/phpmyadmin/srcs/default.conf
+++ b/phpmyadmin/srcs/default.conf
@@ -7,7 +7,7 @@ server {
         listen 80 default_server;
         listen [::]:80 default_server;
 
-        root /usr/share/webapps/;
+        root /usr/share/webapps/phpmyadmin/;
 
         index index.html index.htm index.nginx-debian.html index.php;
 
